src/app/aggregation/parser/gen/AggregationParser.py
#  MIT License
#
#  Copyright (c) 2020 OdinLabs IO
#
#  Permission is hereby granted, free of charge, to any person obtaining a copy
#  of this software and associated documentation files (the "Software"), to deal
#  in the Software without restriction, including without limitation the rights
#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#  copies of the Software, and to permit persons to whom the Software is
#  furnished to do so, subject to the following conditions:
#
#  The above copyright notice and this permission notice shall be included in all
#  copies or substantial portions of the Software.
#
#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
#  SOFTWARE.

# Generated from Aggregation.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class AggregationParser ( Parser ):

    grammarFileName = "Aggregation.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'IN'", "'NOT'", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'['", "']'", "','" ]

    symbolicNames = [ "<INVALID>", "NUMBER", "FLOAT", "SORT", "AGGR", "CUMAGGR", 
                      "ROLAGGR", "COUNT", "ORDEROPERATOR", "IN", "NOT", 
                      "SETOPERATOR", "ARITHMOPERATOR", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "COMMA", "ID_LITERAL", "STR_LITERAL", 
                      "WS" ]

    RULE_aggregationStatement = 0
    RULE_aggregation = 1
    RULE_expression = 2
    RULE_conditionStatement = 3
    RULE_condition = 4
    RULE_selector = 5
    RULE_measure = 6
    RULE_category = 7
    RULE_literals = 8
    RULE_literal = 9

    ruleNames =  [ "aggregationStatement", "aggregation", "expression", 
                   "conditionStatement", "condition", "selector", "measure", 
                   "category", "literals", "literal" ]

    EOF = Token.EOF
    NUMBER=1
    FLOAT=2
    SORT=3
    AGGR=4
    CUMAGGR=5
    ROLAGGR=6
    COUNT=7
    ORDEROPERATOR=8
    IN=9
    NOT=10
    SETOPERATOR=11
    ARITHMOPERATOR=12
    LPAREN=13
    RPAREN=14
    LBRACK=15
    RBRACK=16
    COMMA=17
    ID_LITERAL=18
    STR_LITERAL=19
    WS=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AggregationStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aggregation(self):
            return self.getTypedRuleContext(AggregationParser.AggregationContext,0)


        def EOF(self):
            return self.getToken(AggregationParser.EOF, 0)

        def getRuleIndex(self):
            return AggregationParser.RULE_aggregationStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAggregationStatement" ):
                listener.enterAggregationStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAggregationStatement" ):
                listener.exitAggregationStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregationStatement" ):
                return visitor.visitAggregationStatement(self)
            else:
                return visitor.visitChildren(self)




    def aggregationStatement(self):

        localctx = AggregationParser.AggregationStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_aggregationStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.aggregation(0)
            self.state = 21
            self.match(AggregationParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AggregationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AggregationParser.RULE_aggregation

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ReductionContext(AggregationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.AggregationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def AGGR(self):
            return self.getToken(AggregationParser.AGGR, 0)
        def LPAREN(self):
            return self.getToken(AggregationParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(AggregationParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(AggregationParser.RPAREN, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AggregationParser.COMMA)
            else:
                return self.getToken(AggregationParser.COMMA, i)
        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AggregationParser.ConditionContext)
            else:
                return self.getTypedRuleContext(AggregationParser.ConditionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReduction" ):
                listener.enterReduction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReduction" ):
                listener.exitReduction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReduction" ):
                return visitor.visitReduction(self)
            else:
                return visitor.visitChildren(self)


    class CumReductionContext(AggregationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.AggregationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CUMAGGR(self):
            return self.getToken(AggregationParser.CUMAGGR, 0)
        def LPAREN(self):
            return self.getToken(AggregationParser.LPAREN, 0)
        def SORT(self):
            return self.getToken(AggregationParser.SORT, 0)
        def ID_LITERAL(self):
            return self.getToken(AggregationParser.ID_LITERAL, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AggregationParser.COMMA)
            else:
                return self.getToken(AggregationParser.COMMA, i)
        def expression(self):
            return self.getTypedRuleContext(AggregationParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(AggregationParser.RPAREN, 0)
        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AggregationParser.ConditionContext)
            else:
                return self.getTypedRuleContext(AggregationParser.ConditionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCumReduction" ):
                listener.enterCumReduction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCumReduction" ):
                listener.exitCumReduction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCumReduction" ):
                return visitor.visitCumReduction(self)
            else:
                return visitor.visitChildren(self)


    class IdentityAggregationContext(AggregationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.AggregationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(AggregationParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentityAggregation" ):
                listener.enterIdentityAggregation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentityAggregation" ):
                listener.exitIdentityAggregation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentityAggregation" ):
                return visitor.visitIdentityAggregation(self)
            else:
                return visitor.visitChildren(self)


    class AggregationGroupContext(AggregationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.AggregationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(AggregationParser.LPAREN, 0)
        def aggregation(self):
            return self.getTypedRuleContext(AggregationParser.AggregationContext,0)

        def RPAREN(self):
            return self.getToken(AggregationParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAggregationGroup" ):
                listener.enterAggregationGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAggregationGroup" ):
                listener.exitAggregationGroup(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregationGroup" ):
                return visitor.visitAggregationGroup(self)
            else:
                return visitor.visitChildren(self)


    class AggregationBinOpContext(AggregationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.AggregationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def aggregation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AggregationParser.AggregationContext)
            else:
                return self.getTypedRuleContext(AggregationParser.AggregationContext,i)

        def ARITHMOPERATOR(self):
            return self.getToken(AggregationParser.ARITHMOPERATOR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAggregationBinOp" ):
                listener.enterAggregationBinOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAggregationBinOp" ):
                listener.exitAggregationBinOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregationBinOp" ):
                return visitor.visitAggregationBinOp(self)
            else:
                return visitor.visitChildren(self)


    class RolReductionContext(AggregationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.AggregationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ROLAGGR(self):
            return self.getToken(AggregationParser.ROLAGGR, 0)
        def LPAREN(self):
            return self.getToken(AggregationParser.LPAREN, 0)
        def NUMBER(self):
            return self.getToken(AggregationParser.NUMBER, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AggregationParser.COMMA)
            else:
                return self.getToken(AggregationParser.COMMA, i)
        def SORT(self):
            return self.getToken(AggregationParser.SORT, 0)
        def ID_LITERAL(self):
            return self.getToken(AggregationParser.ID_LITERAL, 0)
        def expression(self):
            return self.getTypedRuleContext(AggregationParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(AggregationParser.RPAREN, 0)
        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AggregationParser.ConditionContext)
            else:
                return self.getTypedRuleContext(AggregationParser.ConditionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRolReduction" ):
                listener.enterRolReduction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRolReduction" ):
                listener.exitRolReduction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRolReduction" ):
                return visitor.visitRolReduction(self)
            else:
                return visitor.visitChildren(self)


    class CountContext(AggregationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.AggregationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COUNT(self):
            return self.getToken(AggregationParser.COUNT, 0)
        def LPAREN(self):
            return self.getToken(AggregationParser.LPAREN, 0)
        def category(self):
            return self.getTypedRuleContext(AggregationParser.CategoryContext,0)

        def RPAREN(self):
            return self.getToken(AggregationParser.RPAREN, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AggregationParser.COMMA)
            else:
                return self.getToken(AggregationParser.COMMA, i)
        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AggregationParser.ConditionContext)
            else:
                return self.getTypedRuleContext(AggregationParser.ConditionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCount" ):
                listener.enterCount(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCount" ):
                listener.exitCount(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCount" ):
                return visitor.visitCount(self)
            else:
                return visitor.visitChildren(self)



    def aggregation(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AggregationParser.AggregationContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_aggregation, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = AggregationParser.AggregationGroupContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 24
                self.match(AggregationParser.LPAREN)
                self.state = 25
                self.aggregation(0)
                self.state = 26
                self.match(AggregationParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = AggregationParser.ReductionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 28
                self.match(AggregationParser.AGGR)
                self.state = 29
                self.match(AggregationParser.LPAREN)
                self.state = 30
                self.expression(0)
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AggregationParser.COMMA:
                    self.state = 31
                    self.match(AggregationParser.COMMA)
                    self.state = 32
                    self.condition(0)
                    self.state = 37
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 38
                self.match(AggregationParser.RPAREN)
                pass

            elif la_ == 3:
                localctx = AggregationParser.CountContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 40
                self.match(AggregationParser.COUNT)
                self.state = 41
                self.match(AggregationParser.LPAREN)
                self.state = 42
                self.category()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AggregationParser.COMMA:
                    self.state = 43
                    self.match(AggregationParser.COMMA)
                    self.state = 44
                    self.condition(0)
                    self.state = 49
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 50
                self.match(AggregationParser.RPAREN)
                pass

            elif la_ == 4:
                localctx = AggregationParser.CumReductionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 52
                self.match(AggregationParser.CUMAGGR)
                self.state = 53
                self.match(AggregationParser.LPAREN)
                self.state = 54
                self.match(AggregationParser.SORT)
                self.state = 55
                self.match(AggregationParser.ID_LITERAL)
                self.state = 56
                self.match(AggregationParser.COMMA)
                self.state = 57
                self.expression(0)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AggregationParser.COMMA:
                    self.state = 58
                    self.match(AggregationParser.COMMA)
                    self.state = 59
                    self.condition(0)
                    self.state = 64
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 65
                self.match(AggregationParser.RPAREN)
                pass

            elif la_ == 5:
                localctx = AggregationParser.RolReductionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 67
                self.match(AggregationParser.ROLAGGR)
                self.state = 68
                self.match(AggregationParser.LPAREN)
                self.state = 69
                self.match(AggregationParser.NUMBER)
                self.state = 70
                self.match(AggregationParser.COMMA)
                self.state = 71
                self.match(AggregationParser.SORT)
                self.state = 72
                self.match(AggregationParser.ID_LITERAL)
                self.state = 73
                self.match(AggregationParser.COMMA)
                self.state = 74
                self.expression(0)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AggregationParser.COMMA:
                    self.state = 75
                    self.match(AggregationParser.COMMA)
                    self.state = 76
                    self.condition(0)
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 82
                self.match(AggregationParser.RPAREN)
                pass

            elif la_ == 6:
                localctx = AggregationParser.IdentityAggregationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 84
                self.expression(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = AggregationParser.AggregationBinOpContext(self, AggregationParser.AggregationContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_aggregation)
                    self.state = 87
                    if not self.precpred(self._ctx, 7):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                    self.state = 88
                    self.match(AggregationParser.ARITHMOPERATOR)
                    self.state = 89
                    self.aggregation(8) 
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AggregationParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExpressionGroupContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(AggregationParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(AggregationParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(AggregationParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionGroup" ):
                listener.enterExpressionGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionGroup" ):
                listener.exitExpressionGroup(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionGroup" ):
                return visitor.visitExpressionGroup(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionBinOpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AggregationParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AggregationParser.ExpressionContext,i)

        def ARITHMOPERATOR(self):
            return self.getToken(AggregationParser.ARITHMOPERATOR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionBinOp" ):
                listener.enterExpressionBinOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionBinOp" ):
                listener.exitExpressionBinOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionBinOp" ):
                return visitor.visitExpressionBinOp(self)
            else:
                return visitor.visitChildren(self)


    class IdentityExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def measure(self):
            return self.getTypedRuleContext(AggregationParser.MeasureContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentityExpression" ):
                listener.enterIdentityExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentityExpression" ):
                listener.exitIdentityExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentityExpression" ):
                return visitor.visitIdentityExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AggregationParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AggregationParser.LPAREN]:
                localctx = AggregationParser.ExpressionGroupContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 96
                self.match(AggregationParser.LPAREN)
                self.state = 97
                self.expression(0)
                self.state = 98
                self.match(AggregationParser.RPAREN)
                pass
            elif token in [AggregationParser.NUMBER, AggregationParser.FLOAT, AggregationParser.ID_LITERAL]:
                localctx = AggregationParser.IdentityExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 100
                self.measure()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = AggregationParser.ExpressionBinOpContext(self, AggregationParser.ExpressionContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 103
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 104
                    self.match(AggregationParser.ARITHMOPERATOR)
                    self.state = 105
                    self.expression(4) 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ConditionStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(AggregationParser.ConditionContext,0)


        def EOF(self):
            return self.getToken(AggregationParser.EOF, 0)

        def getRuleIndex(self):
            return AggregationParser.RULE_conditionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionStatement" ):
                listener.enterConditionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionStatement" ):
                listener.exitConditionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionStatement" ):
                return visitor.visitConditionStatement(self)
            else:
                return visitor.visitChildren(self)




    def conditionStatement(self):

        localctx = AggregationParser.ConditionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_conditionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.condition(0)
            self.state = 112
            self.match(AggregationParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AggregationParser.RULE_condition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ConditionBinOpContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AggregationParser.ConditionContext)
            else:
                return self.getTypedRuleContext(AggregationParser.ConditionContext,i)

        def SETOPERATOR(self):
            return self.getToken(AggregationParser.SETOPERATOR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionBinOp" ):
                listener.enterConditionBinOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionBinOp" ):
                listener.exitConditionBinOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionBinOp" ):
                return visitor.visitConditionBinOp(self)
            else:
                return visitor.visitChildren(self)


    class ConditionNegateContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(AggregationParser.NOT, 0)
        def LPAREN(self):
            return self.getToken(AggregationParser.LPAREN, 0)
        def condition(self):
            return self.getTypedRuleContext(AggregationParser.ConditionContext,0)

        def RPAREN(self):
            return self.getToken(AggregationParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionNegate" ):
                listener.enterConditionNegate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionNegate" ):
                listener.exitConditionNegate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionNegate" ):
                return visitor.visitConditionNegate(self)
            else:
                return visitor.visitChildren(self)


    class IdentityConditionContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def selector(self):
            return self.getTypedRuleContext(AggregationParser.SelectorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentityCondition" ):
                listener.enterIdentityCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentityCondition" ):
                listener.exitIdentityCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentityCondition" ):
                return visitor.visitIdentityCondition(self)
            else:
                return visitor.visitChildren(self)


    class ConditionGroupContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AggregationParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(AggregationParser.LPAREN, 0)
        def condition(self):
            return self.getTypedRuleContext(AggregationParser.ConditionContext,0)

        def RPAREN(self):
            return self.getToken(AggregationParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionGroup" ):
                listener.enterConditionGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionGroup" ):
                listener.exitConditionGroup(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionGroup" ):
                return visitor.visitConditionGroup(self)
            else:
                return visitor.visitChildren(self)



    def condition(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AggregationParser.ConditionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_condition, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AggregationParser.LPAREN]:
                localctx = AggregationParser.ConditionGroupContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
